Improve config documentation